# SSM-Project

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-kernels.txt  requirements.txt
configs/: data.yaml  jamba.yaml  mamba.yaml  transformer.yaml
notebooks/: colab_runner.ipynb
scripts/: aggregate.py  plots.py  run_all.sh  run_efficiency.sh  run_synthetics.sh  train.py
src/ssm_bench/data/: packed_loader.py  prepare_fineweb.py  synthetics.py
src/ssm_bench/eval/: efficiency.py  lm_quality.py  synthetic_train.py
src/ssm_bench/models/: mamba_torch.py  param_utils.py  registry.py
src/ssm_bench/train/: checkpoint.py  schedule.py  trainer.py
src/ssm_bench/utils/: logging.py  seed.py
tests/: conftest.py  test_loader.py  test_param_match.py  test_resume.py  test_synthetics.py
